# canvaswm

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  PRD.md  README.md  SECURITY.md  flake.nix  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/canvaswm-canvas/: Cargo.toml
crates/canvaswm-canvas/src/: lib.rs  momentum.rs  navigation.rs  placement.rs  snapping.rs  viewport.rs
crates/canvaswm-compositor/: Cargo.toml
crates/canvaswm-compositor/src/: drm.rs  input.rs  ipc.rs  main.rs  state.rs  winit.rs
crates/canvaswm-compositor/src/grabs/: move_grab.rs  resize_grab.rs
crates/canvaswm-compositor/src/handlers/: compositor.rs  foreign_toplevel.rs  layer_shell.rs  mod.rs  session_lock.rs  xdg_decoration.rs  xdg_shell.rs  xwayland.rs
crates/canvaswm-config/: Cargo.toml
crates/canvaswm-config/src/: lib.rs
crates/canvaswm-input/: Cargo.toml
crates/canvaswm-input/src/: lib.rs
crates/canvaswm-render/: Cargo.toml
crates/canvaswm-render/src/: background.rs  blur.rs  decorations.rs  dot_grid.rs  element.rs  image_bg.rs  lib.rs  minimap.rs  panel.rs  shader_bg.rs
extras/: canvaswm-msg
