[package]
name = "canvaswm-config"
description = "Configuration system for CanvasWM — supports TOML, JSON, and YAML"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
dirs = "6"
tracing = { workspace = true }
