[package]
name = "canvaswm-render"
description = "Rendering helpers: dot grid background, viewport-aware drawing"
version.workspace = true
edition.workspace = true

[dependencies]
canvaswm-canvas = { workspace = true }
smithay = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
image = { workspace = true }
